--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    //font
+    <!-- font -->
     <link rel="stylesheet" href="./assets/font/stylesheet.css">
-    //custom style
+    <!-- custom style -->
 
     <link rel="stylesheet" href="./styles/style.css">
 </head>
