--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <title>Document</title>
     <!-- font -->
     <link rel="stylesheet" href="./assets/font/stylesheet.css">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="./assets/fontawesome/all.min.css">
     <!-- custom style -->
-
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="navbar">
+            <div class="">
+                <a href="#" class="navbar_link">Bosh sahifa</a>
+                <a href="#" class="navbar_link">FAQ</a>
+            </div>
+            <button class="day_btn"><i class="fa-solid fa-moon"></i></button>
+        </div>
+    </section>
     
     <!-- javascipt code -->
     <script src="./js/main.js"></script>
